tree-sitter-sigil/grammar.js
    source_file: $ => repeat($._item),

    _item: $ => choice(
      $.function_definition,
      $.struct_definition,
      $.enum_definition,
      $.trait_definition,
      $.impl_block,
      $.use_declaration,
      $.mod_declaration,
      $.const_declaration,
      $.type_alias,
      $.macro_definition,
    ),

    // === Comments ===
    function_definition: $ => seq(
      optional($.visibility),
      optional('async'),
      'fn',
      field('name', $.identifier),
      optional($.generic_parameters),
      $.parameter_list,
      optional(seq('->', $._type)),
      optional($.where_clause),
      $.block,
    ),

    parameter_list: $ => seq(
      '(',
      optional(seq(
        $.parameter,
        repeat(seq(',', $.parameter)),
        optional(','),
      )),
      ')',
    ),

    parameter: $ => seq(
      optional('mut'),
      field('name', $.identifier),
      optional($.evidentiality_marker),
      optional(seq(':', $._type)),
    ),

    // === Struct Definition ===
    struct_definition: $ => seq(
      optional($.visibility),
      choice('struct', 'sigil'),
      field('name', $.identifier),
      optional($.generic_parameters),
      optional($.where_clause),
      choice(
        $.struct_body,
        seq($.tuple_fields, ';'),
        ';',
      ),
    ),

    struct_body: $ => seq(
      '{',
      optional(seq(
        $.struct_field,
        repeat(seq(',', $.struct_field)),
        optional(','),
      )),
      '}',
    ),

    struct_field: $ => seq(
      optional($.visibility),
      field('name', $.identifier),
      ':',
      $._type,
    ),

    tuple_fields: $ => seq(
      '(',
      optional(seq(
        $._type,
        repeat(seq(',', $._type)),
        optional(','),
      )),
      ')',
    ),

    // === Enum Definition ===
    trait_definition: $ => seq(
      optional($.visibility),
      'trait',
      field('name', $.identifier),
      optional($.generic_parameters),
      optional($.trait_bounds),
      optional($.where_clause),
      $.trait_body,
    ),

    trait_body: $ => seq(
      '{',
      repeat(choice(
        $.function_definition,
        $.function_signature,
        $.type_alias,
        $.const_declaration,
      )),
      '}',
    ),

    function_signature: $ => seq(
      optional($.visibility),
      optional('async'),
      'fn',
      field('name', $.identifier),
      optional($.generic_parameters),
      $.parameter_list,
      optional(seq('->', $._type)),
      optional($.where_clause),
      ';',
    ),

    // === Impl Block ===
    generic_parameters: $ => seq(
      '<',
      optional(seq(
        $.generic_parameter,
        repeat(seq(',', $.generic_parameter)),
        optional(','),
      )),
      '>',
    ),

    generic_parameter: $ => choice(
      $.type_parameter,
      $.lifetime_parameter,
      $.const_parameter,
    ),

    type_parameter: $ => seq(
      field('name', $.identifier),
      optional($.trait_bounds),
      optional(seq('=', $._type)),
    ),

    trait_bounds: $ => prec.right(seq(
      ':',
      $.trait_bound,
      repeat(seq('+', $.trait_bound)),
    )),

    trait_bound: $ => choice(
      $._type,
      $.lifetime,
    ),

    _type: $ => choice(
      $._simple_type,
      $.reference_type,
      $.pointer_type,
      $.array_type,
      $.slice_type,
      $.tuple_type,
      $.function_type,
      $.impl_trait,
      $.dyn_trait,
    ),

    // Simple types that can have evidentiality markers applied
    primitive_type: $ => choice(
      'i8', 'i16', 'i32', 'i64', 'i128', 'isize',
      'u8', 'u16', 'u32', 'u64', 'u128', 'usize',
      'f32', 'f64',
      'bool', 'char', 'str',
    ),

    block: $ => seq(
      '{',
      repeat($._statement),
      optional($._expression),
      '}',
    ),

    _statement: $ => choice(
      $.let_statement,
      $.expression_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.assignment_statement,
      $._item,
    ),

    let_statement: $ => seq(
      'let',
      // Note: 'mut' is part of identifier_pattern, not here
      $._pattern,
      optional($.evidentiality_marker),
      optional(seq(':', $._type)),
      optional(seq('=', $._expression)),
      ';',
    ),

    expression_statement: $ => seq(
      $._expression,
      ';',
    ),

    return_statement: $ => seq(
      'return',
      optional($._expression),
      ';',
    ),

    break_statement: $ => seq(
      'break',
      optional($.label),
      optional($._expression),
      ';',
    ),

    assignment_statement: $ => seq(
      $._expression,
      choice('=', '+=', '-=', '*=', '/=', '%=', '&=', '|=', '^=', '<<=', '>>='),
      $._expression,
      ';',
    ),

    // === Expressions ===
    // Note: $.identifier is not listed separately since $.path covers single identifiers
    _expression: $ => choice(
      $.path,
      $.literal,
      $.unary_expression,
      $.binary_expression,
      $.call_expression,
      $.method_call,
      $.field_expression,
      $.index_expression,
      $.array_expression,
      $.tuple_expression,
      $.struct_expression,
      $.if_expression,
      $.match_expression,
      $.loop_expression,
      $.while_expression,
      $.for_expression,
      $.block,
      $.closure,
      $.reference_expression,
      $.dereference_expression,
      $.try_expression,
      $.await_expression,
      $.cast_expression,
      $.range_expression,
      $.parenthesized_expression,
      $.pipeline_expression,
      $.morpheme_expression,
    ),

    literal: $ => choice(
      $.number_literal,
      $.string_literal,
      $.char_literal,
      $.boolean_literal,
    ),

    number_literal: $ => token(choice(
      // Decimal
      /[0-9][0-9_]*/,
      // Decimal with suffix
      /[0-9][0-9_]*\.[0-9][0-9_]*/,
      // Hex
      /0x[0-9a-fA-F_]+/,
      // Octal
      /0o[0-7_]+/,
      // Binary
      /0b[01_]+/,
      // Float with exponent
      /[0-9][0-9_]*[eE][+-]?[0-9_]+/,
      /[0-9][0-9_]*\.[0-9][0-9_]*[eE][+-]?[0-9_]+/,
    )),

    string_literal: $ => choice(
      seq('"', repeat(choice(/[^"\\]/, $.escape_sequence)), '"'),
      seq('r#"', /[^"]*/, '"#'),
      seq('r##"', /[^"]*/, '"##'),
    ),

    unary_expression: $ => prec.left(14, choice(
      seq('-', $._expression),
      seq('!', $._expression),
      // Note: * and & are handled by dereference_expression and reference_expression
    )),

    binary_expression: $ => choice(
      // Arithmetic
      prec.left(11, seq($._expression, '*', $._expression)),
      prec.left(11, seq($._expression, '/', $._expression)),
      prec.left(11, seq($._expression, '%', $._expression)),
      prec.left(10, seq($._expression, '+', $._expression)),
      prec.left(10, seq($._expression, '-', $._expression)),
      // Shift
      prec.left(9, seq($._expression, '<<', $._expression)),
      prec.left(9, seq($._expression, '>>', $._expression)),
      // Bitwise
      prec.left(8, seq($._expression, '&', $._expression)),
      prec.left(7, seq($._expression, '^', $._expression)),
      prec.left(6, seq($._expression, '|', $._expression)),
      // Comparison
      prec.left(5, seq($._expression, '==', $._expression)),
      prec.left(5, seq($._expression, '!=', $._expression)),
      prec.left(5, seq($._expression, '<', $._expression)),
      prec.left(5, seq($._expression, '>', $._expression)),
      prec.left(5, seq($._expression, '<=', $._expression)),
      prec.left(5, seq($._expression, '>=', $._expression)),
      // Logical
      prec.left(4, seq($._expression, '&&', $._expression)),
      prec.left(3, seq($._expression, '||', $._expression)),
    ),

    call_expression: $ => prec(15, seq(
      $._expression,
      '(',
      optional(seq(
        $._expression,
        repeat(seq(',', $._expression)),
        optional(','),
      )),
      ')',
    )),

    // method_call has higher precedence than field_expression
    // so s.len() parses as method_call, not call_expression(field_expression)
    method_call: $ => prec(16, seq(
      $._expression,
      '.',
      field('method', $.identifier),
      optional($.type_arguments),
      '(',
      optional(seq(
        $._expression,
        repeat(seq(',', $._expression)),
        optional(','),
      )),
      ')',
    )),

    index_expression: $ => prec(15, seq(
      $._expression,
      '[',
      $._expression,
      ']',
    )),

    array_expression: $ => seq(
      '[',
      choice(
        // Array literal
        optional(seq(
          $._expression,
          repeat(seq(',', $._expression)),
          optional(','),
        )),
        // Array repeat
        seq($._expression, ';', $._expression),
      ),
      ']',
    ),

    if_expression: $ => prec.right(seq(
      'if',
      $._expression,
      $.block,
      optional(seq('else', choice($.block, $.if_expression))),
    )),

    match_expression: $ => seq(
      'match',
      $._expression,
      '{',
      optional(seq(
        $.match_arm,
        repeat(seq(',', $.match_arm)),
        optional(','),
      )),
      '}',
    ),

    match_arm: $ => seq(
      $._pattern,
      optional(seq('if', $._expression)),
      '=>',
      $._expression,  // _expression includes block
    ),

    loop_expression: $ => seq(
      optional($.label),
      'loop',
      $.block,
    ),

    while_expression: $ => seq(
      optional($.label),
      'while',
      $._expression,
      $.block,
    ),

    for_expression: $ => seq(
      optional($.label),
      'for',
      $._pattern,
      'in',
      $._expression,
      $.block,
    ),

    closure: $ => seq(
      optional('move'),
      choice(
        seq('|', optional($.closure_parameters), '|'),
        '||',
      ),
      optional(seq('->', $._type)),
      $._expression,  // _expression includes block
    ),

    closure_parameters: $ => seq(
      $.closure_parameter,
      repeat(seq(',', $.closure_parameter)),
      optional(','),
    ),

    closure_parameter: $ => prec(2, seq(
      // Note: 'mut' is part of identifier_pattern, not here
      $._pattern,
      optional(seq(':', $._type)),
    )),

    reference_expression: $ => prec(14, seq(
      '&',
      optional('mut'),
      $._expression,
    )),

    dereference_expression: $ => prec(14, seq(
      '*',
      $._expression,
    )),

    try_expression: $ => prec(15, seq(
      $._expression,
      '?',
    )),

    cast_expression: $ => prec.left(12, seq(
      $._expression,
      'as',
      $._type,
    )),

    range_expression: $ => prec.left(2, choice(
      seq($._expression, '..', $._expression),
      seq($._expression, '..=', $._expression),
      seq($._expression, '..'),
      seq('..', $._expression),
      seq('..=', $._expression),
      '..',
    )),

    _pattern: $ => choice(
      $.identifier_pattern,
      $.wildcard_pattern,
      $.tuple_pattern,
      $.struct_pattern,
      $.enum_pattern,
      $.literal,
      $.range_pattern,
      $.reference_pattern,
      $.or_pattern,
    ),

    identifier_pattern: $ => prec(1, seq(
      optional('ref'),
      optional('mut'),
      $.identifier,
      optional(seq('@', $._pattern)),
    )),

    wildcard_pattern: $ => '_',

    path: $ => prec.left(choice(
      // Standalone self/crate/super
      choice('self', 'crate', 'super'),
      // Path starting with :: or a prefix
      seq(
        optional(choice('::', seq(choice('self', 'crate', 'super'), '::'))),
        $.identifier,
        repeat(seq('::', $.identifier)),
      ),
    )),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
