tree-sitter-sigil/test/corpus/control_flow.txt
================================================================================
If expression
================================================================================

fn test() {
    if x > 0 {
        return 1;
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (if_expression
        (binary_expression
          (path
            (identifier))
          (literal
            (number_literal)))
        (block
          (return_statement
            (literal
              (number_literal))))))))

================================================================================
If-else expression
================================================================================

fn test() {
    if x { a } else { b }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (if_expression
        (path
          (identifier))
        (block
          (path
            (identifier)))
        (block
          (path
            (identifier)))))))

================================================================================
Match expression
================================================================================

fn test() {
    match x {
        0 => "zero",
        _ => "other",
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (match_expression
        (path
          (identifier))
        (match_arm
          (literal
            (number_literal))
          (literal
            (string_literal)))
        (match_arm
          (wildcard_pattern)
          (literal
            (string_literal)))))))

================================================================================
While loop
================================================================================

fn test() {
    while x > 0 {
        x = x - 1;
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (while_expression
        (binary_expression
          (path
            (identifier))
          (literal
            (number_literal)))
        (block
          (assignment_statement
            (path
              (identifier))
            (binary_expression
              (path
                (identifier))
              (literal
                (number_literal)))))))))

================================================================================
For loop
================================================================================

fn test() {
    for i in items {
        process(i);
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (for_expression
        (identifier_pattern
          (identifier))
        (path
          (identifier))
        (block
          (expression_statement
            (call_expression
              (path
                (identifier))
              (path
                (identifier)))))))))

================================================================================
Loop with break
================================================================================

fn test() {
    loop {
        break;
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (loop_expression
        (block
          (break_statement))))))
