tree-sitter-sigil/test/corpus/expressions.txt
================================================================================
Binary operators
================================================================================

fn test() {
    let a = 1 + 2 * 3;
    let b = x && y || z;
    let c = a == b;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (let_statement
        (identifier_pattern
          (identifier))
        (binary_expression
          (literal
            (number_literal))
          (binary_expression
            (literal
              (number_literal))
            (literal
              (number_literal)))))
      (let_statement
        (identifier_pattern
          (identifier))
        (binary_expression
          (binary_expression
            (path
              (identifier))
            (path
              (identifier)))
          (path
            (identifier))))
      (let_statement
        (identifier_pattern
          (identifier))
        (binary_expression
          (path
            (identifier))
          (path
            (identifier)))))))

================================================================================
Unary operators
================================================================================

fn test() {
    let a = -x;
    let b = !flag;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (let_statement
        (identifier_pattern
          (identifier))
        (unary_expression
          (path
            (identifier))))
      (let_statement
        (identifier_pattern
          (identifier))
        (unary_expression
          (path
            (identifier)))))))

================================================================================
Reference and dereference
================================================================================

fn test() {
    let r = &x;
    let m = &mut y;
    let v = *r;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (let_statement
        (identifier_pattern
          (identifier))
        (reference_expression
          (path
            (identifier))))
      (let_statement
        (identifier_pattern
          (identifier))
        (reference_expression
          (path
            (identifier))))
      (let_statement
        (identifier_pattern
          (identifier))
        (dereference_expression
          (path
            (identifier)))))))

================================================================================
Array expression
================================================================================

fn test() {
    let arr = [1, 2, 3];
    let rep = [0; 10];
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (let_statement
        (identifier_pattern
          (identifier))
        (array_expression
          (literal
            (number_literal))
          (literal
            (number_literal))
          (literal
            (number_literal))))
      (let_statement
        (identifier_pattern
          (identifier))
        (array_expression
          (literal
            (number_literal))
          (literal
            (number_literal)))))))

================================================================================
Index expression
================================================================================

fn test() {
    let x = arr[0];
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (let_statement
        (identifier_pattern
          (identifier))
        (index_expression
          (path
            (identifier))
          (literal
            (number_literal)))))))

================================================================================
Range expressions
================================================================================

fn test() {
    let a = 0..10;
    let b = 0..=9;
    let c = ..5;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (let_statement
        (identifier_pattern
          (identifier))
        (range_expression
          (literal
            (number_literal))
          (literal
            (number_literal))))
      (let_statement
        (identifier_pattern
          (identifier))
        (range_expression
          (literal
            (number_literal))
          (literal
            (number_literal))))
      (let_statement
        (identifier_pattern
          (identifier))
        (range_expression
          (literal
            (number_literal)))))))

================================================================================
Method call
================================================================================

fn test() {
    let len = s.len();
    let upper = s.to_uppercase();
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (let_statement
        (identifier_pattern
          (identifier))
        (method_call
          (path
            (identifier))
          method: (identifier)))
      (let_statement
        (identifier_pattern
          (identifier))
        (method_call
          (path
            (identifier))
          method: (identifier))))))

================================================================================
Cast expression
================================================================================

fn test() {
    let x = 42 as f64;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (let_statement
        (identifier_pattern
          (identifier))
        (cast_expression
          (literal
            (number_literal))
          (primitive_type))))))

================================================================================
Try expression
================================================================================

fn test() {
    let x = fallible()?;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (let_statement
        (identifier_pattern
          (identifier))
        (try_expression
          (call_expression
            (path
              (identifier))))))))
