tree-sitter-sigil/test/corpus/functions.txt
================================================================================
Simple function
================================================================================

fn main() {
    return 0;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (block
      (return_statement
        (literal
          (number_literal))))))

================================================================================
Function with parameters
================================================================================

fn add(a: i32, b: i32) -> i32 {
    return a + b;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        (primitive_type))
      (parameter
        name: (identifier)
        (primitive_type)))
    (primitive_type)
    (block
      (return_statement
        (binary_expression
          (path
            (identifier))
          (path
            (identifier)))))))

================================================================================
Async function
================================================================================

async fn fetch_data() -> str {
    return "data";
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    (primitive_type)
    (block
      (return_statement
        (literal
          (string_literal))))))
